add clock component

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
+<head>
+  <title> functionalities </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
+</head>
   <body>
     <div id="HelloWorld"></div>
     <div class="ListComponent"></div>
+    <div class="Clock"></div>
+    <div class="ToggleButton"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
