form submission in React

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="ListComponent"></div>
     <div class="Clock"></div>
     <div class="ToggleButton"></div>
+    <div class="NameForm"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
