add dropdown feature

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="Clock"></div>
     <div class="ToggleButton"></div>
     <div class="NameForm"></div>
+    <div class="DropDownForm"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
