add lift-state-up example

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="ToggleButton"></div>
     <div class="NameForm"></div>
     <div class="DropDownForm"></div>
+    <div class="FeverCalculator"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
